@@ -11,6 +11,8 @@ PyObjC NEWS</title>
 <p>An overview of the relevant changes in new, and older, releases.</p>
 <h2><a name="version-1-3-1-2005-04">Version 1.3.1 (2005-04-??)</a></h2>
 <ul>
+<li>Removed NSAutoreleasePool category hack that has been deprecated for
+quite some time.</li>
 <li>New <code><span>objc.removeAutoreleasePool</span></code> function that will remove
 PyObjC's global NSAutoreleasePool, which is particularly useful
 for plugins.</li>
